v2 go client js added dynamic metadata

--- a/spikes/v2experimental/demo-client-js/index.html
+++ b/spikes/v2experimental/demo-client-js/index.html
@@ -67,6 +67,16 @@
             <input type="number" id="paralleluploads" name="paralleluploads" value="1" disabled>
           </td>
         </tr>
+        <tr>
+          <td>
+            <label for="metadata_json">
+              Metadata JSON object (file name will be inferred from each file):
+            </label>
+          </td>
+          <td>
+            <textarea id="metadata_json" name="metadata_json" cols="40" rows="5"></textarea>
+          </td>
+        </tr>
       </table>
 
       <br>
