--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -8,11 +8,11 @@
     <form method="GET" action="/manifest">
         <div>
             <label for="data_stream">Data Stream</label>
-            <input type="text" name="data_stream" required />
+            <input type="text" id="data_stream" name="data_stream" required />
         </div>
         <div>
             <label for="data_stream_route">Data Stream Route</label>
-            <input type="text" name="data_stream_route" required />
+            <input type="text" id="data_stream_route" name="data_stream_route" required />
         </div>
         <div>
           <button type="submit">Submit</button>
