--- a/upload-server/example/demo-client-ui-js/index.html
+++ b/upload-server/example/demo-client-ui-js/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>tus-js-client demo - File Upload</title>
-    <link href="assets/index.css" rel="stylesheet">
-    <link href="assets/manifest.css" rel="stylesheet">
+    <link href="https://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+    <link href="./demo.css" rel="stylesheet" media="screen">
   </head>
   <body>
     <div class="container">
