--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <link rel="stylesheet" href="/assets/index.css">
@@ -7,23 +7,25 @@
 </head>
 
 <body>
-    <div id="upload-container">
-        <h1>DEX Upload</h1>
-        <div class="form-container">
-            <form method="GET" action="/manifest">
-                <div class="input-container">
-                    <label for="data_stream">Data Stream</label>
-                    <input type="text" id="data_stream" name="data_stream" required />
-                </div>
-                <div class="input-container">
-                    <label for="data_stream_route">Data Stream Route</label>
-                    <input type="text" id="data_stream_route" name="data_stream_route" required />
-                </div>
-                <div>
-                  <button type="submit">Submit</button>
-                </div>
-            </form>
-        </div>
+    <main>
+        <div id="upload-container">
+            <h1>DEX Upload</h1>
+            <div class="form-container">
+                <form method="GET" action="/manifest">
+                    <div class="input-container">
+                        <label for="data_stream">Data Stream</label>
+                        <input type="text" id="data_stream" name="data_stream" required />
+                    </div>
+                    <div class="input-container">
+                        <label for="data_stream_route">Data Stream Route</label>
+                        <input type="text" id="data_stream_route" name="data_stream_route" required />
+                    </div>
+                    <div>
+                      <button type="submit">Submit</button>
+                    </div>
+                </form>
+            </div>
+    </main>
     </div>
 
 </body>
