banner styling and favicon

--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -4,11 +4,13 @@
 <head>
     <link rel="stylesheet" href="/assets/index.css">
     <link rel="stylesheet" href="/assets/form.css">
+    <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg">
     <title>DEX Upload</title>
 </head>
 
 <body>
     <main>
+        <div id="nav-banner"></div>
         <div id="upload-container">
             <h1>DEX Upload</h1>
             <div class="form-container">
@@ -26,9 +28,8 @@
                     </div>
                 </form>
             </div>
+        </div>
     </main>
-    </div>
-
-</body>
-
+    </body>
+    <script src="/assets/banner.js"></script>
 </html>
