--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -12,7 +12,7 @@
     <main>
         <div id="nav-banner"></div>
         <div id="upload-container">
-            <h1>DEX Upload</h1>
+            <h1>Welcome to DEX Upload</h1>
             <div class="form-container">
                 <form method="GET" action="/manifest">
                     <div class="input-container">
