add skip to main content

--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -9,27 +9,25 @@
 </head>
 
 <body>
-    <main>
-        <div id="nav-banner"></div>
-        <div id="upload-container">
-            <h1>Welcome to DEX Upload</h1>
-            <div class="form-container">
-                <form method="GET" action="/manifest">
-                    <div class="input-container">
-                        <label for="data_stream">Data Stream</label>
-                        <input type="text" id="data_stream" name="data_stream" required />
-                    </div>
-                    <div class="input-container">
-                        <label for="data_stream_route">Data Stream Route</label>
-                        <input type="text" id="data_stream_route" name="data_stream_route" required />
-                    </div>
-                    <div>
-                      <button type="submit">Submit</button>
-                    </div>
-                </form>
-            </div>
+    <nav id="nav-banner"></nav>
+    <main id="main" class="upload-container">
+        <h1>Welcome to DEX Upload</h1>
+        <div class="form-container">
+            <form method="GET" action="/manifest">
+                <div class="input-container">
+                    <label for="data_stream">Data Stream</label>
+                    <input type="text" id="data_stream" name="data_stream" required />
+                </div>
+                <div class="input-container">
+                    <label for="data_stream_route">Data Stream Route</label>
+                    <input type="text" id="data_stream_route" name="data_stream_route" required />
+                </div>
+                <div>
+                    <button type="submit">Submit</button>
+                </div>
+            </form>
         </div>
     </main>
-    </body>
-    <script src="/assets/banner.js"></script>
+</body>
+<script src="/assets/banner.js"></script>
 </html>
