--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -12,6 +12,7 @@
     <nav id="nav-banner"></nav>
     <main id="main" class="upload-container">
         <h1>Welcome to DEX Upload</h1>
+        <h2>Start the upload process by entering a data stream and route.</h2>
         <div class="form-container">
             <form method="GET" action="/manifest">
                 <div class="input-container">
