use go html components

--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-    <nav id="nav-banner"></nav>
+    <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
+    <div role="navigation" id="nav" class="nav-container">
+      <a href="/">
+        <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload
+      </a>
+    </div>
     <main id="main" class="upload-container">
         <h1>Welcome to DEX Upload</h1>
         <h2>Start the upload process by entering a data stream and route.</h2>
