--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -4,6 +4,7 @@
 <head>
     <link rel="stylesheet" href="/assets/index.css">
     <link rel="stylesheet" href="/assets/form.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>DEX Upload</title>
 </head>
 
