--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -9,10 +9,7 @@
   </head>
 
   <body>
-    <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
-    <div role="navigation" id="nav" class="nav-container">
-      <a href="/"> <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload </a>
-    </div>
+    {{template "navbar" .Navbar}}
     <main id="main" class="upload-container">
       <h1>Welcome to DEX Upload</h1>
       <h2>Start the upload process by entering a data stream and route.</h2>
@@ -38,5 +35,4 @@
       </div>
     </main>
   </body>
-  <script src="/assets/banner.js"></script>
 </html>
