--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -9,9 +9,15 @@
   </head>
 
   <body>
-    <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
-    <div role="navigation" id="nav" class="nav-container">
-      <a href="/"> <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload </a>
+    <div>
+      <a class="skip-main" href="#main" tabindex="0">Skip to main content</a>
+      <div class="nav-container">
+        <nav  role="navigation" id="nav">
+          <a href="/">
+            <img src="/assets/dex_logo.svg" alt="DEX logo" /> Upload
+          </a>
+        </nav>
+      </div>
     </div>
     <main id="main" class="upload-container">
       <h1>Welcome to DEX Upload</h1>
