--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="/assets/index.css" />
-    <link rel="stylesheet" href="/assets/form.css" />
-    <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="/assets/dex_logo.svg" />
+    <link rel="stylesheet" href="/assets/index.css" />
     <title>DEX Upload</title>
   </head>
 
@@ -28,8 +28,8 @@
               required
             />
           </div>
-          <div>
-            <button type="submit">Submit</button>
+          <div class="submit-button">
+            <button type="submit">Next</button>
           </div>
         </form>
       </div>
