--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -14,7 +14,7 @@
       <h1>Welcome to DEX Upload</h1>
       <h2>Start the upload process by entering a data stream and route.</h2>
       <div class="form-container">
-        <form method="GET" action="{{.FormActionUrl}}">
+        <form method="GET" action="/manifest">
           <div class="input-container">
             <label for="data_stream">Data Stream</label>
             <input type="text" id="data_stream" name="data_stream" required />
@@ -28,6 +28,7 @@
               required
             />
           </div>
+          {{ .CsrfField }}
           <div class="submit-button">
             <button type="submit">Next</button>
           </div>
