fixes for failing tests

--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -16,8 +16,8 @@
       <div class="form-container">
         <form method="POST" action="/manifest">
           <div class="input-container">
-            <label for="data_stream">Data Stream</label>
-            <input type="text" id="data_stream" name="data_stream" required />
+            <label for="data_stream_id">Data Stream</label>
+            <input type="text" id="data_stream_id" name="data_stream_id" required />
           </div>
           <div class="input-container">
             <label for="data_stream_route">Data Stream Route</label>
