being more explicit in the code about the token so hopefully the scanner can see it

--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -28,7 +28,9 @@
               required
             />
           </div>
-          {{ .CsrfField }}
+          <div class="hidden">
+            <input type="hidden" name="gorilla.csrf.Token" value="{{.CsrfToken}}">
+          </div>
           <div class="submit-button">
             <button type="submit">Next</button>
           </div>
