--- a/upload-server/internal/ui/index.html
+++ b/upload-server/internal/ui/index.html
@@ -14,7 +14,7 @@
       <h1>Welcome to DEX Upload</h1>
       <h2>Start the upload process by entering a data stream and route.</h2>
       <div class="form-container">
-        <form method="POST" action="/manifest">
+        <form method="GET" action="/manifest">
           <div class="input-container">
             <label for="data_stream_id">Data Stream</label>
             <input type="text" id="data_stream_id" name="data_stream_id" required />
@@ -27,9 +27,6 @@
               name="data_stream_route"
               required
             />
-          </div>
-          <div class="hidden">
-            <input type="hidden" name="gorilla.csrf.Token" value="{{.CsrfToken}}" />
           </div>
           <div class="submit-button">
             <button type="submit">Next</button>
