--- a/upload-server/internal/ui/upload.html
+++ b/upload-server/internal/ui/upload.html
@@ -155,10 +155,12 @@
 
         <div class="file-details-container">
           <h2>Upload Details</h2>
+          {{if .Info.FileInfo}}
           <div class="detail-container file-size-{{KebabCase .Info.UploadStatus.Status}}">
             <div class="detail-label">File Size:</div>
             <div class="detail-value">{{FormatBytes .Info.FileInfo.size_bytes}}</div>
           </div>
+          {{end}}
           <div class="detail-container">
             <div class="detail-label">Sender ID:</div>
             <div class="detail-value">{{.Info.Manifest.sender_id}}</div>
