created a docker-compose file for running playwright tests; set the playwright version to a specific value; updated tests to be more robust; added playwright tests to tus-upload-server-ci workflow; removed the endpoint field from the form because setting it is unnecessary and possibly destructive

--- a/upload-server/internal/ui/upload.html
+++ b/upload-server/internal/ui/upload.html
@@ -24,18 +24,6 @@
 
         <div class="form-container">
           <div class="input-container new-upload">
-            <label for="endpoint">Upload Endpoint</label>
-            <input
-              type="text"
-              id="endpoint"
-              name="endpoint"
-              value="http://localhost:8080/files/"
-            />
-            <!-- http://localhost:8080/files/ -->
-            <!-- https://tusd.tusdemo.net/files/ -->
-            <!-- https://apidev.cdc.gov/upload -->
-          </div>
-          <div class="input-container new-upload">
             <label for="chunksize">
               Chunk Size (bytes)
               <div class="input-tip">
@@ -190,6 +178,7 @@
   </body>
 
   <script>
+    const endpoint = "{{.UploadEndpoint}}"
     const uploadUrl = "{{.UploadUrl}}";
     const uploadStatus = "{{.UploadStatus}}";
   </script>
