--- a/upload-server/internal/ui/upload.html
+++ b/upload-server/internal/ui/upload.html
@@ -174,6 +174,7 @@
         <div class="new-upload-button-container">
           {{template "newuploadbtn" .NewUploadBtn}}
         </div>
+      </div>
     </main>
   </body>
 
@@ -181,6 +182,7 @@
     const endpoint = "{{.UploadEndpoint}}"
     const uploadUrl = "{{.UploadUrl}}";
     const uploadStatus = "{{.UploadStatus}}";
+    const authToken = "{{.AuthToken}}";
   </script>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/tus-js-client@latest/dist/tus.js"></script>
   <script type="text/javascript" src="/assets/tusclient.js"></script>
