--- a/upload-server/internal/ui/login.html
+++ b/upload-server/internal/ui/login.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="/assets/index.css">
+        <link rel="stylesheet" type="text/css" href="/assets/login.css">
         <title>DEX Upload</title>
     </head>
     <body>
@@ -11,11 +12,12 @@
             {{if .AuthFailed}}
             <h3 class="warning">Authentication failed, try again!</h3>
             {{ end }}
+            <h1>Welcome to PHDO Upload Login</h1>
             <div class="form-container">
                 <form method="POST" action="/oauth_callback">
                     <div>
                         <label for="token">Authentication Token *</label>
-                        <textarea id="token" name="token" required></textarea>
+                        <textarea id="token" name="token" rows="4" cols="50" required></textarea>
                     </div>
                     <div class="hidden">
                         <input type="hidden" name="gorilla.csrf.Token" value="{{.CsrfToken}}" />
