logout button in navbar

--- a/upload-server/internal/ui/upload.html
+++ b/upload-server/internal/ui/upload.html
@@ -172,7 +172,7 @@
         </div>
 
         <div class="new-upload-button-container">
-          {{template "newuploadbtn" .NewUploadBtn}}
+          {{template "linkbtn" .NewUploadBtn}}
         </div>
       </div>
     </main>
