minimal auth code flow and login with sams btn

--- a/upload-server/internal/ui/login.html
+++ b/upload-server/internal/ui/login.html
@@ -13,19 +13,8 @@
             <h3 class="warning">Authentication failed, try again!</h3>
             {{ end }}
             <h1>Welcome to PHDO Upload Login</h1>
-            <div class="form-container">
-                <form method="POST" action="/oauth_callback">
-                    <div>
-                        <label for="token">Authentication Token *</label>
-                        <textarea id="token" name="token" rows="4" cols="50" required></textarea>
-                    </div>
-                    <div class="hidden">
-                        <input type="hidden" name="gorilla.csrf.Token" value="{{.CsrfToken}}" />
-                    </div>
-                    <div class="submit-button">
-                        <button type="submit">Login</button>
-                    </div>
-                </form>
+            <div>
+                {{template "linkbtn" .LoginBtn}}
             </div>
         </main>
     </body>
